--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -34,23 +34,22 @@
                     <h3>Other references</h3>
                     <a href="{{print_issue.other_refs_url}}">{{print_issue.other_refs}}</a>
                     <h3>Technical Details</h3>
-                    <p>{{print_issue.technical_details}}</p>
+                    <div class="container">
+                        <form *ngIf="show" [formGroup]="editorForm" (ngSubmit)="onSubmit()">
+                            <div class="form-group">
+                                <label for="editor">
+                                </label>
+                                <quill-editor [style]="editorStyle" formControlName="editor"
+                                    [(ngModel)]="print_issue.technical_details">
+                                </quill-editor>
+                            </div>
+                            <button mat-button color="blue">Submit</button>
+                        </form>
+                        <p [innerHTML]="editorContent" id="print-section"></p>
+                    </div>
+                    <!-- <p>{{print_issue.technical_details}}</p> -->
                     <h3>Current status</h3>
                     <p>{{print_issue.current_status}}</p>
-                </div>
-            </section>
-            <section class="sheet padding-10mm">
-                <div class="container">
-                    <form *ngIf="show" [formGroup]="editorForm" (ngSubmit)="onSubmit()">
-                        <div class="form-group">
-                            <label for="editor">
-                            </label>
-                            <quill-editor [style]="editorStyle" formControlName="editor" [(ngModel)]="textFormat">
-                            </quill-editor>
-                        </div>
-                        <button mat-button color="blue">Submit</button>
-                    </form>
-                    <p [innerHTML]="editorContent" id="print-section"></p>
                 </div>
             </section>
 
