--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,6 @@ a.logo {
 	color: white;
 	background-color: #337ab7;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
