--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,41 @@
 <mat-toolbar color="primary">
-        <mat-toolbar-row>
-          <!-- <button mat-icon-button>
+  <mat-toolbar-row>
+    <!-- <button mat-icon-button>
             <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
           </button> -->
-          <a mat-button [routerLink]="'/'" class="logo">Report Repository</a>
-          <!-- <span class="menu-spacer"></span> -->
-          <div>
-            <a mat-button [routerLink]="'/editor'"> Report Editor </a>
-          </div>
-        </mat-toolbar-row>
-      </mat-toolbar>
-      
-      
-      <router-outlet></router-outlet>
+    <a mat-button [routerLink]="'/'" class="logo">Report Repository</a>
+    <!-- <span class="menu-spacer"></span> -->
+    <div>
+      <a mat-button [routerLink]="'/editor'"> Report Editor </a>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+  <!-- This is the tree node template for leaf nodes -->
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <li class="mat-tree-node">
+      <!-- use a disabled button to provide padding for tree leaf -->
+      <button mat-icon-button disabled></button>
+      {{node.name}}
+    </li>
+  </mat-tree-node>
+  <!-- This is the tree node template for expandable nodes -->
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <li>
+      <div class="mat-tree-node">
+        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+        {{node.name}}
+      </div>
+      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+        <ng-container matTreeNodeOutlet></ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
+</mat-tree>
+
+<router-outlet></router-outlet>
