--- a/src/app/projects/project/project.component.html
+++ b/src/app/projects/project/project.component.html
@@ -15,7 +15,8 @@
                     <input formControlName="mobile" matInput placeholder="Mobile*">
                     <mat-error *ngIf="service.form.controls['mobile'].errors?.required">This field is mandatory.
                     </mat-error>
-                    <mat-error *ngIf="service.form.controls['mobile'].errors?.minlength">Minimum 8 characters is required.
+                    <mat-error *ngIf="service.form.controls['mobile'].errors?.minlength">Minimum 8 characters is
+                        required.
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field>
@@ -50,11 +51,13 @@
                     <mat-checkbox formControlName="isPermanent">Permanent Employee</mat-checkbox>
                 </div>
                 <div class="button-row">
-                    <button mat-raised-button color="primary" type="submit" [disabled]="service.form.invalid">Submit</button>
-                    <button mat-raised-button color="warn" (click)="onClear()">Clear</button>
+                    <button mat-raised-button color="primary" type="submit"
+                        [disabled]="service.form.invalid">Submit</button>
+                    <button mat-raised-button color="warn" (click)="createDog('sucesso?')">Clear</button>
                 </div>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
-
+    <div>asdasd</div>
+    <div *ngFor="let dog of dogs">{{dog.name}}</div>
 </form>
