--- a/src/app/projects/project/project.component.html
+++ b/src/app/projects/project/project.component.html
@@ -58,6 +58,5 @@
             </div>
         </mat-grid-tile>
     </mat-grid-list>
-    <div>asdasd</div>
-    <div *ngFor="let dog of dogs">{{dog.name}}</div>
+<!--    <div *ngFor="let dog of dogs">{{dog.name}}</div>-->
 </form>
