--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,5 +6,5 @@
         </span>
         <span class="fill-remaining-space"></span>
     </mat-toolbar>
-    <app-project></app-project>
+    <app-project-table></app-project-table>
 </div>
