--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,76 +4,98 @@
 // @import "paper-css/paper.css";
 
 body {
-	margin: 0;
+  margin: 0;
 }
 
 a.logo {
-	font-size: 22px;
+  font-size: 22px;
 }
 
 .mat-button.mat-blue {
-	color: white;
-	background-color: #337ab7;
+  color: white;
+  background-color: #337ab7;
 }
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
+
 body {
-	margin: 0;
-	font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 div.container {
-	margin: 0px 40px;
+  margin: 0px 40px;
 }
 
 .fill-remaining-space {
-	flex: 1 1 auto;
+  flex: 1 1 auto;
 }
 
 form.normal-form {
-	margin: 10px;
+  margin: 10px;
 }
 
 .controllers-container > * {
-	width: 100%;
+  width: 100%;
 }
 
 .add-bottom-padding {
-	padding: 10px;
+  padding: 10px;
 }
 
-mat-radio-group mat-radio-button{
-	margin-left: 5px;
+mat-radio-group mat-radio-button {
+  margin-left: 5px;
 }
 
-.button-row button{
-	margin: 5px;
+.button-row button {
+  margin: 5px;
 }
 
 /* filter controls*/
-.search-div{
+.search-div {
   margin: 10px;
 }
-.search-form-field{
+
+.search-form-field {
   width: 60%;
   margin-left: 10px;
   padding: 5px 10px;
   background-color: #f5f5f5;
   border-radius: 5px;
 }
+
 .search-form-field div.mat-form-field-underline {
   display: none;
 }
-.search-form-field div.mat-form-field-infix{
+
+.search-form-field div.mat-form-field-infix {
   border-top: 0px;
 }
-.search-form-field div.mat-form-field-wrapper{
+
+.search-form-field div.mat-form-field-wrapper {
   padding-bottom: 0px;
 }
-.search-form-field div.mat-form-field-suffix button{
+
+.search-form-field div.mat-form-field-suffix button {
   height: 32px;
   width: 32px;
+}
+
+.invisible-button {
+  background: transparent;
+  border: none !important;
+  padding: 1px;
+}
+
+snack-bar-container.success {
+  background-color: #5cb85c;
+  color: #fff;
+}
+
+snack-bar-container.notification {
+  font-size: 18px !important;
+  font-weight: bold;
 }
