--- a/src/app/projects/newProject/newProject.component.html
+++ b/src/app/projects/newProject/newProject.component.html
@@ -2,7 +2,7 @@
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile>
       <div class="controllers-container">
-        <input type="hidden" formControlName="$key">
+<!--        <input type="hidden" formControlName="$key">-->
         <mat-form-field>
           <input formControlName="name" matInput placeholder="Name*">
           <mat-error>This field is mandatory.</mat-error>
@@ -13,7 +13,7 @@
               <mat-icon>add</mat-icon>
               New Client
             </mat-option>
-            <ng-container *ngFor="let client of projectFormService.clientsArray">
+            <ng-container *ngFor="let client of formOptionsService.clientsArray">
               <mat-option value="{{client.id}}">{{client.name}}</mat-option>
             </ng-container>
           </mat-select>
@@ -24,8 +24,8 @@
               <mat-icon>add</mat-icon>
               New User
             </mat-option>
-            <ng-container *ngFor="let user of projectFormService.usersArray">
-              <mat-option value="{{user.name}}">{{user.name}}</mat-option>
+            <ng-container *ngFor="let user of formOptionsService.usersArray">
+              <mat-option value="{{user.id}}">{{user.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
@@ -40,8 +40,8 @@
               <mat-icon>add</mat-icon>
               New User
             </mat-option>
-            <ng-container *ngFor="let user of projectFormService.usersArray">
-              <mat-option value="{{user.name}}">{{user.name}}</mat-option>
+            <ng-container *ngFor="let user of formOptionsService.usersArray">
+              <mat-option value="{{user.id}}">{{user.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
@@ -51,8 +51,8 @@
               <mat-icon>add</mat-icon>
               New User
             </mat-option>
-            <ng-container *ngFor="let user of projectFormService.usersArray">
-              <mat-option value="{{user.name}}">{{user.name}}</mat-option>
+            <ng-container *ngFor="let user of formOptionsService.usersArray">
+              <mat-option value="{{user.id}}">{{user.name}}</mat-option>
             </ng-container>
           </mat-select>
         </mat-form-field>
@@ -69,10 +69,9 @@
           <button mat-raised-button color="primary" type="submit"
                   [disabled]="projectFormService.form.invalid">Submit
           </button>
-          <button mat-raised-button color="warn" (click)="createDog('sucesso?')">Clear</button>
+          <button mat-raised-button color="warn">Clear</button>
         </div>
       </div>
     </mat-grid-tile>
   </mat-grid-list>
-  <!--    <div *ngFor="let dog of dogs">{{dog.name}}</div>-->
 </form>
