--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,10 @@ mat-radio-group mat-radio-button {
   padding: 1px;
 }
 
+.small-plus {
+  color: #6888ff;
+}
+
 snack-bar-container.success {
   background-color: #5cb85c;
   color: #fff;
