--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,3 +103,8 @@ snack-bar-container.notification {
   font-size: 18px !important;
   font-weight: bold;
 }
+
+.edit-titles {
+  justify-content: center;
+  flex-direction: column;
+}
