--- a/src/app/projects/update-project/update-project.component.html
+++ b/src/app/projects/update-project/update-project.component.html
@@ -1,9 +1,19 @@
 <div class="mat-elevation-z8">
   <mat-table [dataSource]="auditorListData" matSort>
+    <ng-container matColumnDef="auditors">
+      <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
+        Auditors
+      </mat-header-cell>
+    </ng-container>
 
-    <ng-container matColumnDef="auditor">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Auditors</mat-header-cell>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.email}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -12,21 +22,30 @@
         <button mat-icon-button (click)="onEdit(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" >
+        <button mat-icon-button color="warn">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
     </ng-container>
-
+    <mat-header-row *matHeaderRowDef="['auditors']"></mat-header-row>
     <mat-header-row *matHeaderRowDef="auditorDisplayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: auditorDisplayedColumns;"></mat-row>
   </mat-table>
 
   <mat-table [dataSource]="reviewerListData" matSort>
-
-    <ng-container matColumnDef="reviewer">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Reviewers</mat-header-cell>
+    <ng-container matColumnDef="reviewers">
+      <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
+        Reviewers
+      </mat-header-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
       <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.email}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -35,14 +54,89 @@
         <button mat-icon-button (click)="onEdit(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" >
+        <button mat-icon-button color="warn">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
     </ng-container>
-
+    <mat-header-row *matHeaderRowDef="['reviewers']"></mat-header-row>
     <mat-header-row *matHeaderRowDef="reviewerDisplayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: reviewerDisplayedColumns;"></mat-row>
+  </mat-table>
+
+  <mat-table [dataSource]="pmListData" matSort>
+    <ng-container matColumnDef="pms">
+      <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
+        Project Managers
+      </mat-header-cell>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.email}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let row;let i = index;let element">
+        <button mat-icon-button (click)="onEdit(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="['pms']"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="pmDisplayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: pmDisplayedColumns;"></mat-row>
+  </mat-table>
+
+  <mat-table [dataSource]="relListData" matSort>
+    <ng-container matColumnDef="rels">
+      <mat-header-cell *matHeaderCellDef colspan="5" [ngClass]="'edit-titles'">
+        Reports
+      </mat-header-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.status}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="revDeadline">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Review Deadline</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.revDeadline}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="delDeadline">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Delivery Deadline</mat-header-cell>
+      <mat-cell *matCellDef="let element">{{element.delDeadline}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell *matCellDef="let row;let i = index;let element">
+        <button mat-icon-button (click)="onEdit(row)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="['rels']"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="relDisplayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: relDisplayedColumns;"></mat-row>
   </mat-table>
 </div>
 
