--- a/src/app/projects/update-project/update-project.component.html
+++ b/src/app/projects/update-project/update-project.component.html
@@ -1,4 +1,7 @@
 <div class="mat-elevation-z8">
+  <!-----------------------------------------Auditors Table--------------------------------------------------------->
+
+
   <mat-table [dataSource]="auditorListData" matSort>
     <ng-container matColumnDef="auditors">
       <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
@@ -8,7 +11,7 @@
 
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+      <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="email">
@@ -19,19 +22,35 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="onEdit(row)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="removeAuditor(row)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
     </ng-container>
+
+    <ng-container matColumnDef="newAuditor">
+      <mat-footer-cell *matFooterCellDef colspan="3">
+        <mat-select placeholder=" + Add Auditor" [(value)]="selected">
+          <mat-option>
+            <mat-icon>add</mat-icon>
+            New Client
+          </mat-option>
+          <ng-container *ngFor="let user of formOptionsService.usersArray">
+            <mat-option value="{{user.id}}">{{user.name}}</mat-option>
+          </ng-container>
+        </mat-select>
+        <button mat-icon-button (click)="addAuditorToProject(selected)">
+          <mat-icon>check</mat-icon>
+        </button>
+      </mat-footer-cell>
+    </ng-container>
+
     <mat-header-row *matHeaderRowDef="['auditors']"></mat-header-row>
     <mat-header-row *matHeaderRowDef="auditorDisplayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: auditorDisplayedColumns;"></mat-row>
+    <mat-footer-row *matFooterRowDef="['newAuditor']"></mat-footer-row>
   </mat-table>
-
+  <!-----------------------------------------Reviewers Table--------------------------------------------------------->
   <mat-table [dataSource]="reviewerListData" matSort>
     <ng-container matColumnDef="reviewers">
       <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
@@ -51,10 +70,7 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="onEdit(row)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="removeReviewer(row)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
@@ -63,7 +79,7 @@
     <mat-header-row *matHeaderRowDef="reviewerDisplayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: reviewerDisplayedColumns;"></mat-row>
   </mat-table>
-
+  <!--------------------------------------Project Managers Table--------------------------------------------------->
   <mat-table [dataSource]="pmListData" matSort>
     <ng-container matColumnDef="pms">
       <mat-header-cell *matHeaderCellDef colspan="3" [ngClass]="'edit-titles'">
@@ -83,10 +99,7 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="onEdit(row)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="removePM(row)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
@@ -95,7 +108,7 @@
     <mat-header-row *matHeaderRowDef="pmDisplayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: pmDisplayedColumns;"></mat-row>
   </mat-table>
-
+  <!-----------------------------------------Reports Table--------------------------------------------------------->
   <mat-table [dataSource]="relListData" matSort>
     <ng-container matColumnDef="rels">
       <mat-header-cell *matHeaderCellDef colspan="5" [ngClass]="'edit-titles'">
@@ -105,7 +118,7 @@
 
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-      <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+      <mat-cell *matCellDef="let element">{{element.id}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="status">
@@ -126,10 +139,7 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef></mat-header-cell>
       <mat-cell *matCellDef="let row;let i = index;let element">
-        <button mat-icon-button (click)="onEdit(row)">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn">
+        <button mat-icon-button color="warn" (click)="removeRelatorio(row)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </mat-cell>
