--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,7 @@ snack-bar-container.notification {
 }
 
 .edit-titles {
+  background-color: #c5c5c5;
   justify-content: center;
   flex-direction: column;
 }
