--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,32 +10,32 @@
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
-
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-  <!-- This is the tree node template for leaf nodes -->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <li class="mat-tree-node">
-      <!-- use a disabled button to provide padding for tree leaf -->
-      <button mat-icon-button disabled></button>
-      {{node.name}}
-    </li>
-  </mat-tree-node>
-  <!-- This is the tree node template for expandable nodes -->
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <li>
-      <div class="mat-tree-node">
-        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
-          <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-          </mat-icon>
-        </button>
-        {{node.name}}
-      </div>
-      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">
-        <ng-container matTreeNodeOutlet></ng-container>
-      </ul>
-    </li>
-  </mat-nested-tree-node>
-</mat-tree>
+<app-projects></app-projects>
+<!--<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">-->
+<!--  &lt;!&ndash; This is the tree node template for leaf nodes &ndash;&gt;-->
+<!--  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>-->
+<!--    <li class="mat-tree-node">-->
+<!--      &lt;!&ndash; use a disabled button to provide padding for tree leaf &ndash;&gt;-->
+<!--      <button mat-icon-button disabled></button>-->
+<!--      {{node.name}}-->
+<!--    </li>-->
+<!--  </mat-tree-node>-->
+<!--  &lt;!&ndash; This is the tree node template for expandable nodes &ndash;&gt;-->
+<!--  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">-->
+<!--    <li>-->
+<!--      <div class="mat-tree-node">-->
+<!--        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">-->
+<!--          <mat-icon class="mat-icon-rtl-mirror">-->
+<!--            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}-->
+<!--          </mat-icon>-->
+<!--        </button>-->
+<!--        {{node.name}}-->
+<!--      </div>-->
+<!--      <ul [class.example-tree-invisible]="!treeControl.isExpanded(node)">-->
+<!--        <ng-container matTreeNodeOutlet></ng-container>-->
+<!--      </ul>-->
+<!--    </li>-->
+<!--  </mat-nested-tree-node>-->
+<!--</mat-tree>-->
 
 <router-outlet></router-outlet>
