--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,94 +1,137 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <button mat-icon-button>
-            <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
-        </button>
-        <a mat-button [routerLink]="'/'" class="logo">Report Repository</a>
-        <div>
-            <a mat-button [routerLink]="'/editor'"> Report Editor </a>
-        </div>
-    </mat-toolbar-row>
+  <mat-toolbar-row>
+    <button mat-icon-button>
+      <mat-icon (click)="sidenav.toggle()">menu</mat-icon>
+    </button>
+    <a mat-button [routerLink]="'/'" class="logo">Report Repository</a>
+    <div>
+      <a mat-button [routerLink]="'/editor'"> Report Editor </a>
+    </div>
+  </mat-toolbar-row>
 </mat-toolbar>
 
 <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="side">
-<!--        <mat-nav-list>-->
-<!--            <a mat-list-item *ngFor="let issue of issues" (click)="printIssue(issue)">{{issue.title}}</a>-->
-<!--            <a mat-list-item (click)="sidenav.toggle()" mat-list-item>Close</a>-->
-<!--        </mat-nav-list>-->
+  <mat-sidenav #sidenav mode="side">
+    <!--        <mat-nav-list>-->
+    <!--            <a mat-list-item *ngFor="let issue of issues" (click)="printIssue(issue)">{{issue.title}}</a>-->
+    <!--            <a mat-list-item (click)="sidenav.toggle()" mat-list-item>Close</a>-->
+    <!--        </mat-nav-list>-->
 
 
+    <div class="search-div">
+      <mat-form-field class="search-form-field" floatLabel="never">
+        <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+    <div class="mat-elevation-z8">
+      <mat-table [dataSource]="listData" matSort>
+        <ng-container matColumnDef="title">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+          <mat-cell *matCellDef="let element">{{element.title}}</mat-cell>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef></mat-header-cell>
+          <mat-cell *matCellDef="let row;let i = index;let element">
+            <button mat-icon-button>
+              <mat-icon>edit</mat-icon>
+            </button>
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="10" showFirstLastButtons></mat-paginator>
+    </div>
 
 
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <button type="button">Add</button>
+    <section #sRef class="sheet" #focusPage>
+      <div>
+        <h1>{{complexRelatorio["companyLogo"]}}</h1>
+        <h1>{{complexRelatorio["reportTitle"]}}</h1>
+        <h1>{{complexRelatorio["targetCompany"]}}</h1>
+        <h1>{{complexRelatorio["classification"]}}</h1>
+        <h1>{{complexRelatorio["version"]}}</h1>
+        <h1>{{complexRelatorio["remarks"]}}</h1>
+        <h1>{{complexRelatorio["date"]}}</h1>
+<!--        <div class="myPageBreak"></div>-->
+<!--        <mat-divider></mat-divider>-->
 
-      <div class="search-div">
-        <mat-form-field class="search-form-field" floatLabel="never">
-          <input matInput [(ngModel)]="searchKey" placeholder="Search" autocomplete="off" (keyup)="applyFilter()">
-          <button mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey" (click)="onSearchClear()">
-            <mat-icon>close</mat-icon>
-          </button>
-        </mat-form-field>
+
+        <!--                <div (dblclick)="onDblClick()" #editorDiv>-->
+        <!--                    <form *ngIf="show" [formGroup]="editorForm" (ngSubmit)="onSubmit()">-->
+        <!--                        <div class="form-group">-->
+        <!--                            <label for="editor">-->
+        <!--                            </label>-->
+        <!--                            <quill-editor [style]="editorStyle" formControlName="editor" (onContentChanged)="pageGrowth(focusPage)">-->
+        <!--                            </quill-editor>-->
+        <!--                        </div>-->
+        <!--                        <button mat-button color="blue">Submit</button>-->
+        <!--                    </form>-->
+        <!--                    <p *ngIf="!show" [innerHTML]="editorContent" id="print-section"></p>-->
+        <!--                </div>-->
       </div>
-      <div class="mat-elevation-z8">
-        <mat-table [dataSource]="listData" matSort>
-          <ng-container matColumnDef="title">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-            <mat-cell *matCellDef="let element">{{element.title}}</mat-cell>
-          </ng-container>
-          <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef="let row;let i = index;let element">
-              <button mat-icon-button >
-                <mat-icon>edit</mat-icon>
-              </button>
-            </mat-cell>
-          </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 50]" [pageSize]="10" showFirstLastButtons></mat-paginator>
-      </div>
+    </section>
+    <section class="sheet">
+      Contents //TODO
+    </section>
+    <section class="sheet">
+      <h1>Executive Summary</h1>
+      <p>{{complexRelatorio.executiveSummary.summary}}</p>
+      <p *ngFor="let rec of complexRelatorio.executiveSummary.recommendations"> {{rec}}</p>
 
+    </section>
+    <section class="sheet">
+      <h1>Introduction</h1>
+      <h3>Document Information</h3>
+      <p>{{complexRelatorio.introduction.documentInformation}}</p>
+      <h3>Responsibility Statement</h3>
+      <p>{{complexRelatorio.introduction.responsibilityStatement}}</p>
+      <h3>Classification</h3>
+      <p>{{complexRelatorio.introduction.classification}}</p>
+      <h3>Document Owner</h3>
+      <p>{{complexRelatorio.introduction.documentOwner}}</p>
+      <h3>Authors and Reviewers</h3>
+      <p>{{complexRelatorio.introduction.authorsAndReviewers.authors}}</p>
+      <p>{{complexRelatorio.introduction.authorsAndReviewers.approvers}}</p>
+      <p>{{complexRelatorio.introduction.authorsAndReviewers.reviewers}}</p>
+    </section>
+    <section class="sheet">
+      <h3>Document Management</h3>
+      <p *ngFor="let ver of complexRelatorio.introduction.documentManagement"> {{ver.date}}</p>
+    </section>
+    <section class="sheet">
+      <h3>Document Structure</h3>
+      <p>{{complexRelatorio.introduction.documentStructure}}</p>
+    </section>
+    <section class="sheet">
+      <h3>Disclaimer</h3>
+      <p>{{complexRelatorio.introduction.disclaimer}}</p>
+    </section>
+    <section class="sheet">
+      <h1>Assessment Information</h1>
+      <h3>Assessment Scope</h3>
+      <p>{{complexRelatorio.assessmentInformation.assessmentScope.executionPeriod}}</p>
+      <p>{{complexRelatorio.assessmentInformation.assessmentScope.assetNames}}</p>
+      <p>{{complexRelatorio.assessmentInformation.assessmentScope.assetsDescription}}</p>
+      <p>{{complexRelatorio.assessmentInformation.assessmentScope.assetAddresses}}</p>
+      <h3>Organizational and Technical Contacts</h3>
+      <p *ngFor="let contact of complexRelatorio.assessmentInformation.organizationalAndTechnicalContacts">
+        {{contact.role}} | {{contact.name}} | {{contact.contact}}
+      </p>
+    </section>
+    <section class="sheet">
+      <h3>Contraints</h3>
+      <p>{{complexRelatorio.assessmentInformation.constraints}}</p>
+    </section>
+    <section class="sheet"></section>
 
-
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <button type="button">Add</button>
-        <section #sRef class="sheet" #focusPage>
-            <div>
-                <h1>{{complexRelatorio.companyLogo}}</h1>
-                <h3>Description</h3>
-                <p>{{print_issue.description}}</p>
-                <h3>Impact</h3>
-                <p>{{print_issue.impact}}</p>
-                <h3>Remediation</h3>
-                <p>{{print_issue.remediation}}</p>
-                <h3>CVSS Vector</h3>
-                <div class="myPageBreak"></div>
-                <mat-divider></mat-divider>
-                <a href="{{print_issue.cvss_vector_url}}">{{print_issue.cvss_vector}}</a>
-                <h3>Other references</h3>
-                <a href="{{print_issue.other_refs_url}}">{{print_issue.other_refs}}</a>
-                <h3>Technical Details</h3>
-                <div (dblclick)="onDblClick()" #editorDiv>
-                    <form *ngIf="show" [formGroup]="editorForm" (ngSubmit)="onSubmit()">
-                        <div class="form-group">
-                            <label for="editor">
-                            </label>
-                            <quill-editor [style]="editorStyle" formControlName="editor" (onContentChanged)="pageGrowth(focusPage)">
-                            </quill-editor>
-                        </div>
-                        <button mat-button color="blue">Submit</button>
-                    </form>
-                    <p *ngIf="!show" [innerHTML]="editorContent" id="print-section"></p>
-                </div>
-                <!-- <p>{{print_issue.technical_details}}</p> -->
-                <h3>Current status</h3>
-                <p>{{print_issue.current_status}}</p>
-            </div>
-        </section>
-
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
 </mat-sidenav-container>
 <router-outlet></router-outlet>
