--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,8 @@ snack-bar-container.notification {
   justify-content: center;
   flex-direction: column;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
